--- a/style.css
+++ b/style.css
@@ -5,8 +5,6 @@
     padding: 0;
     box-sizing: border-box;
 }
-
-
 body{
     display: flex;
     justify-content: center;
@@ -15,6 +13,7 @@ body{
     flex-direction: column;
     background:#23242a;
 }
+
 
 .box{
     position: relative;
@@ -185,3 +184,24 @@ input[type="submit"]:active
 {
     opacity: 0.8;
 }
+
+@media screen and (max-width:800px){
+    .main{
+        width: 100%;
+    }
+    aside{
+        width: 100%;
+    }
+    
+}
+
+@media screen and (max-width:400px){
+    .contenedor{
+        width: 100%;
+    }
+    aside{
+        display:flex;
+    }
+    
+}
+
