--- a/style.css
+++ b/style.css
@@ -200,7 +200,7 @@ input[type="submit"]:active
         width: 80%;
     }
     aside{
-        display:flex;
+        display:none;
     }
     
 }
