--- a/style.css
+++ b/style.css
@@ -6,12 +6,14 @@
     box-sizing: border-box;
 }
 body{
+    background-image:url("img/trading.jpg");
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
     flex-direction: column;
-    background:#23242a;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 
